--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,11 @@
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.datasource.username=admin
+spring.datasource.password=admin
+spring.datasource.url= jdbc:postgresql://localhost:5432/estudos
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format-sql=true
+spring.application.name= "EstudosSpring"
 
+#server:
+server.port: 3033
